// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GymCard display correctly for desktop. 1`] = `
<GymCardDesktop
  gym={
    Object {
      "address": "1234 Five Street",
      "authorizedEditors": Array [
        "id",
      ],
      "city": "Ames",
      "email": "abc@d.com",
      "id": "gym1",
      "logoUrl": "",
      "name": "Gym One",
      "phoneNumber": "1234567890",
      "photoUrl": "",
      "state": "Iowa",
      "walls": Array [
        Object {
          "gymId": "gym1",
          "id": "wall1",
          "name": "Wall1",
          "routes": Array [
            Object {
              "averageGrade": "GRADE_5_9",
              "averageRating": 4,
              "gymId": "gym1",
              "holdColor": "Blue",
              "id": "route1",
              "name": "RouteOne",
              "setter": "LukeOne",
              "types": Array [
                "TOP_ROPE",
                "LEAD",
              ],
              "wallId": "wall1",
            },
            Object {
              "averageGrade": "GRADE_5_12ab",
              "averageRating": 4,
              "gymId": "gym1",
              "holdColor": "Red",
              "id": "route2",
              "name": "RouteTwo",
              "setter": "LukeTwo",
              "types": Array [
                "TOP_ROPE",
                "LEAD",
              ],
              "wallId": "wall1",
            },
          ],
          "types": Array [
            "LEAD",
            "TOP_ROPE",
          ],
        },
        Object {
          "gymId": "gym1",
          "id": "wall2",
          "name": "Wall2",
          "routes": Array [],
          "types": Array [
            "LEAD",
            "TOP_ROPE",
          ],
        },
      ],
      "website": "lukeshay.com",
      "zipCode": "50014",
    }
  }
/>
`;

exports[`GymCard display correctly for mobile. 1`] = `
<GymCardMobile
  gym={
    Object {
      "address": "1234 Five Street",
      "authorizedEditors": Array [
        "id",
      ],
      "city": "Ames",
      "email": "abc@d.com",
      "id": "gym1",
      "logoUrl": "",
      "name": "Gym One",
      "phoneNumber": "1234567890",
      "photoUrl": "",
      "state": "Iowa",
      "walls": Array [
        Object {
          "gymId": "gym1",
          "id": "wall1",
          "name": "Wall1",
          "routes": Array [
            Object {
              "averageGrade": "GRADE_5_9",
              "averageRating": 4,
              "gymId": "gym1",
              "holdColor": "Blue",
              "id": "route1",
              "name": "RouteOne",
              "setter": "LukeOne",
              "types": Array [
                "TOP_ROPE",
                "LEAD",
              ],
              "wallId": "wall1",
            },
            Object {
              "averageGrade": "GRADE_5_12ab",
              "averageRating": 4,
              "gymId": "gym1",
              "holdColor": "Red",
              "id": "route2",
              "name": "RouteTwo",
              "setter": "LukeTwo",
              "types": Array [
                "TOP_ROPE",
                "LEAD",
              ],
              "wallId": "wall1",
            },
          ],
          "types": Array [
            "LEAD",
            "TOP_ROPE",
          ],
        },
        Object {
          "gymId": "gym1",
          "id": "wall2",
          "name": "Wall2",
          "routes": Array [],
          "types": Array [
            "LEAD",
            "TOP_ROPE",
          ],
        },
      ],
      "website": "lukeshay.com",
      "zipCode": "50014",
    }
  }
/>
`;
